# tskit-rust-pyo3-starter

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
src/: ffi.rs  haploid_wright_fisher.rs  lib.rs
tests/: test_sim.py
