[package]
name = "tskit-maturin-starter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tskit_maturin_starter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
rand = "0.10.0"
rand_distr = "0.6.0"
tskit = { version = "0.15.0-alpha.4", features = ["derive", "bindings"], git = "https://github.com/tskit-dev/tskit-rust" }

